src/app.scss
/* ... */
.c-card-wrapper {
}

.c-dateblock {
  .c-card {
    width: 100%;
  }
}

.c-mailsendbox {
  display: flex;
  align-items: flex-end;
}

.c-teambox {
  justify-self: center;

  @media only screen and (min-width: 600px) {
    grid-row: 1 / span 2;
    grid-column: 2;
    justify-self: auto;
  }
}

.c-timer-entry {
  display: flex;
  align-items: center;
  justify-content: space-between;
  max-width: 500px;
}

.c-timer {
  &-actions {
  }

  &-action {
    padding: 0.25em;

    &:hover {
      cursor: pointer;
      border-radius: 30px;
      background-color: var(--dimmed);
    }
  }
}

.c-timer-countdown {
  margin-right: 0.5em;

  &.t-red {
    color: #e01e5a;
  }
}

.c-timer-app {
  display: flex;
  align-items: center;
}

.c-preloader {
  display: flex;
  align-items: center;
  flex-direction: column;
  width: 100%;
  height: 100vh;

  img {
    width: 100px;
    margin-top: 30vh;
    margin-bottom: 2em;
  }
}

.c-toggle-switch {
  &__container {
    display: flex;
  }
}

.c-switcher {
  &-container {
    display: flex;

    input {
      display: none;
    }

    label {
      display: flex;
      align-items: center;
    }
  }

  &-title {
    margin-right: 5px;
  }

  &-switch {
    position: relative;
    display: block;
    width: 50px;
    height: 26px;
    transition: all 0.3s;
    transform: scale(0.8);
    border: 1px solid #bfbfbf;
    border-radius: 15px;
    background: var(--dimmed);

    &:hover {
      cursor: pointer;
    }

    &::before {
      position: absolute;
      z-index: 1;
      top: 2px;
      left: 2px;
      width: 20px;
      height: 20px;
      content: "";
      transition: transform 0.3s;
      border-radius: 50%;
      background: #fff;
    }
  }

  &-container [type="checkbox"]:checked ~ label &-switch {
    border-color: transparent;
    // background: #2eb67d;
    background: var(--primary-dimmed);
  }

  &-container [type="checkbox"]:checked ~ label &-switch::before {
    transform: translateX(24px);
  }
}

// From this point onwards, the CSS is attempting to be clean.

.o-overflow-wrapper {
  overflow: hidden;
  height: 100%;
}

.o-overflow-enabler {
  overflow: auto;
  height: 100%;
}

input[type="text"],
input[type="email"],
input[type="password"] {
  line-height: 1.5;
  padding: 8px;
  border: 2px solid var(--line-dark);
  border-radius: var(--radius);
  background-color: #fff;
}

.o-button {
  display: inline-block;
  padding: 0.5em 1em;
  cursor: pointer;
  border: 2px solid transparent;
  border-radius: var(--radius);
}

.c-login-form,
.c-card {
  &__button {
    line-height: 1.8;
    border-color: var(--line-dark);
  }
}

.c-page-actions {
  &__button {
    border-color: var(--line-dark);
  }
}

#app {
  width: 100%;
  height: 100vh;
}

// Only not terrible code after this line (hopefully)

.o-infield {
  &-input {
    display: inline-block;
    margin-right: 1em;

    label {
      margin-right: 0.5em;
    }
  }

  &-actions {
    display: inline-block;

    button {
      border-color: var(--line-dark);
      line-height: 1.5;
      padding: 8px;
      margin-right: 1em;

      &:last-child {
        margin-right: 0;
      }
    }
  }
}

